--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 <div style="text-align:center">
   <h2 style="color:#1ea9b3;">Work Gallery</h2>
 </div>
-<iframe src="https://ss07ss.github.io/WorkGallery/" width="120%" height="300"
+<iframe src="https://ss07ss.github.io/SriRadeshyam.github.io/" width="120%" height="300"
 marginwidth="50" loading="lazy" frameborder="0" scrolling="auto">
 </iframe>
         </div>
