--- a/index.html
+++ b/index.html
@@ -211,7 +211,10 @@
                         </div>
                     </div>
                 </div>
-                 <p>
+            <div class="col-lg-6 text-center">
+                 <p style="color:black;
+  margin-bottom: 30px;
+  font-size: 18px;">
                                   an experienced interior decorator and contractor with a passion for creating beautiful and functional spaces. <br>
                        With over a decade of experience, I have developed a keen eye for design and a deep understanding of what it takes to bring a project from concept to completion.<br>
 
@@ -223,7 +226,7 @@ Customer service is a top priority for me, and I strive to create a positive and
 
 I am passionate about creating spaces that are not only beautiful but also functional, and I am always up-to-date on the latest trends and techniques in the industry. <br>Please take a look at my portfolio to see some of my previous work, and feel free to contact me to discuss your next project.
                     
-                            </p>
+                </p></div>
             </div>
         
         </section>
