--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 <p>Here Is Our Work Quotation For Year <b>2023<br> Click To View.</p>
                           
                             <a href="assets/img/workquotation.png" download>
-                              <img src="assets/img/workquotation.png" alt="work" width="70" height="42">
+                              <img src="assets/img/work.png" alt="work" width="70" height="42">
                             </a>
                             
                             <p>
