--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="social">
                     <a href="https://t.me/Sk Sharma"><i class="fa-brands fa-telegram"></i></a>
                  <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                 <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                 <a href="https://www.instagram.com/sr.interiordecorator/"><i class="fa-brands fa-square-instagram"></i></a>
                 </div>
                 <div class="togo-menu-copyright">
                     <p><a href="#">Mail Us For All Query</a></p>
@@ -319,7 +319,7 @@ marginwidth="50" loading="lazy" frameborder="0" scrolling="auto">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 offset-md-8">
-                        <p>&copy; 2023 sridc.in ALL RIGHT RESERVED.</p>
+                        <p>&copy; 2024 sridc.in ALL RIGHT RESERVED.</p>
                     </div>
                 </div>
             </div>
