--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
                             <div class="con">
                                 <div class="numb">02</div>
                                 <h5>Residental & Commericial </h5>
-                                <p>Here Is Our Work Quotation For Year <b>2023<br> Click To View.</p>
+                                <p>Here Is Our Work Quotation For Year <b>2025<br> Click To View.</p>
                           
-                            <a href="assets/img/work.png" download>
+                            <a href="assets/img/wor.png" download>
                               <img src="assets/img/work.png" alt="work" width="70" height="42">
                             </a>
                             
