--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@ marginwidth="50" loading="lazy" frameborder="0" scrolling="auto">
                                <div class="connect">
                                 <button  id="btn-contact-me" class="btn btn-lg btn-light" onclick="openUrl()">Contact Us</button>
                       <br><h1>   </h1></h1> <a href="https://t.me/Sk Sharma"><i class="fa-brands fa-telegram"></i></a>
-                                 <a href="https://wa.me/919840711620"><i class="fa-brands fa-whatsapp"></i></a>
-                                <a  href="mailto:decormavensales@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+                                 <a href="https://wa.me/919940189520"><i class="fa-brands fa-whatsapp"></i></a>
+                                <a  href="mailto:forsskkss@gmail.com"><i class="fa-solid fa-envelope"></i></a>
                         </div>
                          
                     </div>
@@ -316,14 +316,14 @@ marginwidth="50" loading="lazy" frameborder="0" scrolling="auto">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 offset-md-8">
-                        <p>&copy; 2024 sridc.in ALL RIGHT RESERVED.</p>
+                        <p>&copy; 2025 sridc.in ALL RIGHT RESERVED.</p>
                     </div>
                 </div>
             </div>
         </footer>
     </div>
     <script>
-        const openUrl = () => window.open("mailto:sumansharma01012001@gmail.com", "_self")
+        const openUrl = () => window.open("mailto:forsskkss@gmail.com", "_self")
     </script> 
     <!-- jQuery -->
     <script src="assets/js/jquery-3.0.0.min.js"></script>
